# localBro

./: .gitignore  AI.md  PACKS.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
.qoder/repowiki/zh/content/: 开发指南.md  快速开始.md  性能优化.md  故障排除.md  核心功能.md  部署和打包.md  项目概述.md
.qoder/repowiki/zh/content/前端系统/: API 通信层.md  React 组件体系.md  前端系统.md  状态管理系统.md  用户交互与事件处理.md
.qoder/repowiki/zh/content/后端系统/: Rust 应用架构.md  后端系统.md  目录大小索引.md  路径管理.md  错误处理系统.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
docs/prd/: README.md  v0.1-mvp.md  v0.2-ai-and-packs.md  v0.3-plugins-and-polish.md
examples/skins/sunset/: manifest.json  tokens.css
src/: App.tsx  api.ts  columns.ts  main.tsx  store.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/core/: ai_guard.rs  archive.rs  collections.rs  error.rs  fs_ops.rs  mod.rs  pack.rs  paths.rs  settings.rs  size_index.rs
src/ai/: agent.ts  anthropic.ts  client.ts  policy.ts  providers.ts  tools.ts
src/components/: AiPanel.tsx  AiSettings.tsx  AiToolsPanel.tsx  ContextMenu.tsx  FileList.tsx  FloatingActions.tsx  FolderActionsMenu.tsx  InputPromptModal.tsx  PluginList.tsx  PreviewModal.tsx  PreviewPane.tsx  SettingsDropdown.tsx  SettingsModal.tsx  Sidebar.tsx  SkinPicker.tsx  StatusBar.tsx  Toolbar.tsx
src/i18n/: index.ts
src/i18n/locales/: en.ts  zh-CN.ts
src/plugins/: runtime.ts
src/preview/: builtins.tsx  registry.ts
src/skins/: manager.ts
src/styles/: app.css  tokens.css
(+31 files in other folders)
