[package]
name = "localbro"
version = "0.1.0"
description = "LocalBro - a customizable cross-platform local file browser"
authors = ["LocalBro"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "localbro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
trash = "5"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate", "bzip2", "time"] }
tar = "0.4"
flate2 = "1"

[target.'cfg(target_os = "macos")'.dependencies]
# For macOS specific file attributes in future tasks

[target.'cfg(target_os = "windows")'.dependencies]
# For Windows specific file attributes in future tasks


